[package]
name = "ip-filter-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
ip-filter-common = { path = "../ip-filter-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.0.8"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "ip-filter"
path = "src/main.rs"
