[package]
name = "udp-monitor-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
udp-monitor-common = { path = "../udp-monitor-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "udp-monitor"
path = "src/main.rs"
